<resources>
    <string name="app_name">mapleStorym</string>
    <string name="physicalAttack">物理攻擊力</string>
    <string name="physicalAttackIncrease">物理攻擊力增加&#040;&#037;&#041;</string>
    <string name="physicalDamageIncrease">物理傷害增加&#040;&#037;&#041;</string>
    <string name="magicAttack">魔法攻擊力</string>
    <string name="magicAttackIncrease">魔法攻擊力增加&#040;&#037;&#041;</string>
    <string name="magicDamageIncrease">魔法傷害增加&#040;&#037;&#041;</string>
    <string name="playerAttackIncrease">角色攻擊力增加&#040;&#037;&#041;</string>
    <string name="critRate">致命攻擊率&#040;&#037;&#041;</string>
    <string name="critAttack">致命攻擊</string>
    <string name="critDamage">致命攻擊傷害&#040;&#037;&#041;</string>
    <string name="bossAttackIncrease">Boss攻擊力增加&#040;&#037;&#041;</string>
    <string name="expectedValue">期望攻擊值:</string>
    <string name="skillDamage">技能傷害&#040;&#037;&#041;</string>
</resources>
