<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lin.shirley.maplestorym.MainActivity">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="0dp"
        android:layout_height="495dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="8dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/physicalAttack_textView"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/physicalAttack"
                android:textSize="15dp"
                />

            <EditText
                android:id="@+id/physicalAttack_editText"
                android:layout_width="133dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginStart="37dp"
                android:layout_toEndOf="@+id/physicalAttack_textView"
                android:ems="10"
                android:inputType="number"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/physicalAttackIncrease_textView"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/physicalAttackIncrease"
                android:textSize="15dp"
                />

            <EditText
                android:id="@+id/physicalAttackIncrease_editText"
                android:layout_width="133dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginStart="37dp"
                android:layout_toEndOf="@+id/physicalAttackIncrease_textView"
                android:ems="10"
                android:inputType="number|numberDecimal"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/physicalDamgeIncrease_textView"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/physicalDamageIncrease"
                android:textSize="15dp"
                />

            <EditText
                android:id="@+id/physicalDamageIncrease_editText"
                android:layout_width="133dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginStart="37dp"
                android:layout_toEndOf="@+id/physicalDamgeIncrease_textView"
                android:ems="10"
                android:inputType="number|numberDecimal"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/bossAttackIncrease_textView"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/bossAttackIncrease"
                android:textSize="15dp"
                />

            <EditText
                android:id="@+id/bossAttackIncrease_editText"
                android:layout_width="133dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginStart="37dp"
                android:layout_toEndOf="@+id/bossAttackIncrease_textView"
                android:ems="10"
                android:inputType="number|numberDecimal"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/playerAttackIncrease_textView"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/playerAttackIncrease"
                android:textSize="15dp"
                />

            <EditText
                android:id="@+id/playerAttackIncrease_editText"
                android:layout_width="133dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginStart="37dp"
                android:layout_toEndOf="@+id/playerAttackIncrease_textView"
                android:ems="10"
                android:inputType="number|numberDecimal"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/critRate_textView"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/critRate"
                android:textSize="15dp"
                />

            <EditText
                android:id="@+id/critRate_editText"
                android:layout_width="133dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginStart="37dp"
                android:layout_toEndOf="@+id/critRate_textView"
                android:ems="10"
                android:inputType="number|numberDecimal"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/critAttack_textView"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/critAttack"
                android:textSize="15dp"
                />

            <EditText
                android:id="@+id/critAttack_editText"
                android:layout_width="133dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginStart="37dp"
                android:layout_toEndOf="@+id/critAttack_textView"
                android:ems="10"
                android:inputType="number"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/critDamage_textView"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/critDamage"
                android:textSize="15dp"
                />

            <EditText
                android:id="@+id/critDamage_editText"
                android:layout_width="133dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginStart="37dp"
                android:layout_toEndOf="@+id/critDamage_textView"
                android:ems="10"
                android:inputType="number|numberDecimal"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/skillDamage_textView"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/critDamage"
                android:textSize="15dp"
                />

            <EditText
                android:id="@+id/skillDamage_editText"
                android:layout_width="133dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginStart="37dp"
                android:layout_toEndOf="@+id/skillDamage_textView"
                android:ems="10"
                android:inputType="number|numberDecimal"/>
        </RelativeLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="40dp">

            <Button
                android:id="@+id/submit_botton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SUBMIT"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/expectedValue_textView"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/expectedValue"
                android:textSize="15dp"
                />
        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
